<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="#f5f5f5"
    android:orientation="vertical"
    android:paddingBottom="6dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/login_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                style="@style/FirebaseEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="20dp"
                android:theme="@style/FirebaseEditTextTheme" />

            <EditText
                android:id="@+id/password"
                style="@style/FirebaseEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:theme="@style/FirebaseEditTextTheme" />

            <Button
                android:id="@+id/password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/password_button"
                android:text="@string/signup"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/social_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
</LinearLayout>